
Table users {
  id int [pk, increment]
  username varchar [unique, not null]
  password_hash text [not null]
  role varchar [not null, note: "admin | teacher | assistant"]
  active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Table students {
  id int [pk, increment]
  student_code varchar [unique, not null, note: "TTMD_birthyear_seq"]
  full_name varchar [not null]
  birth_year int [not null]
  created_at timestamp [default: `now()`]
}

Table subjects {
  id int [pk, increment]
  subject_name varchar [not null]
}

Table classes {
  id int [pk, increment]
  class_name varchar
  subject_id int [not null, ref: > subjects.id]
  teacher_id int [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
}

Table enrollments {
  id int [pk, increment]
  student_id int [not null, ref: > students.id]
  class_id int [not null, ref: > classes.id]
  status varchar [default: "active", note: "active | dropped"]
}

Table attendance {
  id int [pk, increment]
  enrollment_id int [not null, ref: > enrollments.id]
  attendance_date date [not null]
  status varchar [not null, note: "present | absent_with_permission | absent_without_permission"]
  created_at timestamp [default: `now()`]

  Indexes {
    (enrollment_id, attendance_date) [unique]
  }
}

Table tuition {
  id int [pk, increment]
  enrollment_id int [not null, ref: > enrollments.id]
  month varchar [not null, note: "YYYY-MM"]
  amount decimal
  paid boolean [default: false]
  paid_at timestamp

  Indexes {
    (enrollment_id, month) [unique]
  }
}

Table teacher_attendance {
  id int [pk, increment]
  teacher_id int [not null, ref: > users.id]
  attendance_date date [not null]
  status varchar [not null, note: "present | absent"]
  note text

  Indexes {
    (teacher_id, attendance_date) [unique]
  }
}
